crates/core/tests/snapshots/snapshots__snapshot_completed_view.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 178
expression: "doc.read(ViewFilter::Completed, \"default\", &clock)"
---
rows:
  - id: "5"
    title: Submit taxes
    notes: ""
    done: true
    due: 2592000
    due_label: 31 Jan
    due_state: Later
    list_id: default
    list_name: Tasks
  - id: "4"
    title: Clean garage
    notes: ""
    done: true
    due: ~
    due_label: ~
    due_state: None
    list_id: default
    list_name: Tasks
view: Completed
current_list: default
lists:
  - id: default
    name: Tasks
    color: Blue
active_count: 4
can_undo: true
can_redo: false
revision: 12
